@@ -1,3 +1,8 @@
+2012-09-09  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (echo-shell-scripts): new target for
+	check-wrapper-consistency.
+
 2012-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am (installdirs-local): Make sure $(bindir) exists.
